# ComfyUI-MotifVideo2B

./: .gitignore  CLAUDE.md  README.md  __init__.py  config.py  install.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: analyzer.md  atlassian-manager.md  common.md  developer.md  doc-writer.md  github-manager.md  knowledge-writer.md  migrator.md  planner.md  recommender.md  researcher.md  reviewer.md  tester.md
.claude/commands/: auto.md  check.md  issue.md  migrate.md  restore.md  scaffold.md  task-plan.md
.claude/hooks/: agent-tracker.sh  commit-guard.sh  detect-state.sh  mirror-check.sh  plan-gate.sh  session-init.sh
.claude/skills/: debug.md  dependency-check.md  doc-update.md  (+11 more)
experiments/: TEMPLATE.md
models/: __init__.py  adapter.py  attention_processor.py  compile_config.py  latent_format.py  sage_ops.py
nodes/: __init__.py  gguf_loader.py  image_encode.py  latent.py  loader.py  teacache.py  text_encode.py  vae_loader.py
scripts/: measure_fp8_workflow.sh  run_measure.sh
tests/: test_config.py  test_detect_unet_config.py  test_e2e_gpu.py  test_image_encode.py  test_init_syspath.py  test_model_init.py  test_nodes.py  test_p2_offload_contract.py  test_p4_attention_mask.py  test_p5_requirements.py  test_scaffolding.py  test_teacache.py  test_text_encoder.py  test_tokenizer_assets.py  test_transformer_connection.py  test_vae_loader.py  test_workflow_i2v.py
text_encoders/: __init__.py  t5_gemma2.py  t5_gemma2_config.py  t5_gemma2_native.py
workflows/: Motif-2B_I2V_example.json  Motif-2B_T2V_example.json  i2v_example.json
(+64 files in other folders)
